--- a/css/style.css
+++ b/css/style.css
@@ -462,11 +462,11 @@ label{
         min-width: 300px;
         
     }
-    nav{
-        grid-column-start: 4;
-        grid-column-end: 9;
-    }
-
+  
+.team{
+   
+    grid-template-rows: 200px 400px;
+}
     nav ul li a{
         font-size: 1rem;
     }
@@ -497,7 +497,7 @@ label{
     nav{
         width: 100%;
         margin-top:-2rem;
-        
+        display: none;
     }
     nav ul{
        padding:0px;
@@ -513,7 +513,7 @@ label{
 }
 @media only screen and (max-width: 480px){
     
-
+nav{display: none}
 .team h3{
     font-size: .8rem;
 }
